--- a/docs/critical-coastal-habitat-trends.Rmd
+++ b/docs/critical-coastal-habitat-trends.Rmd
@@ -10,32 +10,38 @@ source(here::here('R/setup.R'))
 load(url("https://github.com/tbep-tech/hmpu-workflow/raw/master/data/acres.RData"))
 load(url("https://github.com/tbep-tech/hmpu-workflow/raw/master/data/subtacres.RData"))
 
-subest <- lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = '2020', estout = T) %>% 
+submax <- '2020'
+sprmax <- '2020'
+
+subest <- lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = submax, estout = T) %>% 
   select(val, chgper) %>% 
   tibble::deframe()
-sprest <- lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = '2020', estout = T) %>% 
+sprest <- lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = sprmax, estout = T) %>% 
   select(val, chgper) %>% 
   tibble::deframe()
 ```
 
 Prior to the 1980s, many of Tampa Bay’s habitats were damaged, reduced, or lost during development activities. Once the value of these habitats was recognized, protections were put in place and monitoring began on a regular basis to understand the effectiveness of different conservation and restoration activities.
 
-When viewed as a whole, the most significant and meaningful trends in the TBEP habitats of interest over the periods of record examined include: 1) the `r subest['Seagrasses']`% gain in seagrasses from 1988 to 2020; 2) the gains in both emergent tidal wetlands (`r sprest['Mangrove Forests']`% gain in mangroves, `r sprest['Salt Marshes']`% gain in salt marshes) and freshwater wetlands (`r sprest['Non-Forested Freshwater Wetlands']`% gain) between 1990 and 2020; and 3) the `r sprest['Native Uplands']`% loss in native upland habitats from 1990 to 2020. 
+<center><img alt="weedon" src="img/weedonback.jpg" width="400"/></center>
+<p></p>
+
+## Current Trends
+
+When viewed as a whole, the most significant and meaningful trends in the TBEP habitats of interest over the periods of record examined include: 1) the `r subest['Seagrasses']`% gain in seagrasses from 1988 to `r submax`; 2) the gains in both emergent tidal wetlands (`r sprest['Mangrove Forests']`% gain in mangroves, `r sprest['Salt Marshes']`% gain in salt marshes) and freshwater wetlands (`r sprest['Non-Forested Freshwater Wetlands']`% gain) between 1990 and `r sprmax`; and 3) the `r sprest['Native Uplands']`% loss in native upland habitats from 1990 to `r sprmax`. 
 
 The increasing trend in seagrass coverage is a testament to improved bay water quality. While some recent gains in seagrass coverage have been erased, the remaining seagrasses still reflect improvements in water quality over the past several decades and still serve as an important guidepost for successful restoration of those subtidal habitats.
 
 The intertidal habitat gains demonstrate the effectiveness of publicly-funded habitat restoration projects and state and federal wetland regulatory programs. Increases in salt barrens may also reflect a landward expansion associated with sea level rise. 
 
 ```{r}
-lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = '2020', estout = F, family = fml)
+lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = submax, estout = F, family = fml)
 ```
 
 However, a `r sprest['Developed']`% increase for developed lands and `r sprest['Restorable']`% loss for restorable lands in the watershed is a concern for continued habitat restoration and protection. A loss of upland habitats is the result of continued human population growth and urban development in the Tampa Bay watershed, and unless local protections for native upland habitats improve, this trend will likely continue.
 
 ```{r}
-lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = '2020', estout = F, family = fml)
+lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = sprmax, estout = F, family = fml)
 ```
 
-Land use change data: https://shiny.tbep.org/landuse-change/
-  
-Seagrass coverage data: https://shiny.tbep.org/seagrass-analysis/
+See additional visualization tools for land use change here: https://shiny.tbep.org/landuse-change/. See additional visualization tools for seagrass coverage data here: https://shiny.tbep.org/seagrass-analysis/.
