--- a/docs/habitat-restoration.Rmd
+++ b/docs/habitat-restoration.Rmd
@@ -20,7 +20,7 @@ Habitat restoration in the Tampa Bay region has evolved over time from a simple 
 rstdat_tab(rstdat, maxyr = maxyr, family = fml)
 ```
 
-To continue the improvements that have occurred, the Habitat Master Plan (2020 Update) includes a target of restoring 3,150 acres of wetlands and uplands by 2030:
+To continue the improvements that have occurred, the Habitat Master Plan ([2020 Update](https://drive.google.com/file/d/1Hp0l_qtbxp1JxKJoGatdyuANSzQrpL0I/view)) includes a target of restoring 3,150 acres of wetlands and uplands by 2030:
 
 * 50 acres of oyster reefs
 
@@ -29,6 +29,8 @@ To continue the improvements that have occurred, the Habitat Master Plan (2020 U
 * 1,500 acres of freshwater wetlands, including freshwater marshes, wet prairies, and cypress forests
 
 * 600 acres of uplands, including coastal hammocks and pine flatwoods
+
+## Additional Resources
 
 2020 Tampa Bay Habitat Master Plan Update: https://drive.google.com/file/d/1Hp0l_qtbxp1JxKJoGatdyuANSzQrpL0I/view
 
