--- a/docs/tampa-bay-nekton-index.Rmd
+++ b/docs/tampa-bay-nekton-index.Rmd
@@ -16,6 +16,9 @@ sums <- tbnisum_fun(tbniscr, maxyr)
 
 The nekton index, which is similar to the water quality scorecard, uses data from the State’s Fisheries Independent Monitoring Program (FWC - FWRI) to track trends for representative species. With samples dating back to 1998, the long-term record can be related to water quality and habitat characteristics to identify factors affecting health of bay fisheries. The index evaluates catch data relative to habitat use, species composition and diversity, and feeding dynamics to understand trends in the fish community.
 
+<center><img alt="seatrout" src="img/seatrout.jpg" width="450"/></center>
+<p></p>
+
 An annual "snapshot" of ecological health helps fisheries managers target efforts to improve habitat or other factor. Nekton index scores can be translated into actionable management categories with narrative interpretations. Each action category has a description to provide guidance to managers:
 
 <span style="color:#33FF3B; text-shadow: 0 0 3px #333;">__Stay the Course__</span>: Continue planned projects. Report data via annual progress reports. 
@@ -31,11 +34,15 @@ p <- show_tbniscr(tbniscr, family = fml, width = 800, height = 350, plotly = T)
 div(p, align = 'center')
 ```
 
+## Results for `r maxyr`
+
 In `r maxyr`, Old Tampa Bay received an action category of `r sums$OTB$action` (nekton index score of `r sums$OTB$scr`), Hillsborough Bay received an action category of `r sums$HB$action` (nekton index score of `r sums$HB$scr`), Middle Tampa Bay received an action category of `r sums$MTB$action` (nekton index score of `r sums$MTB$scr`), and Lower Tampa Bay received an action category of `r sums$LTB$action` (nekton index score of `r sums$LTB$scr`)
 
 ```{r}
 p <- show_tbnimatrix(tbniscr, width = 350, height = 600, plotly = T, family = fml)
 div(p, align = 'center')
 ```
+
+<center><img alt="seatrout" src="img/Nekton_Action.png" width="450"/></center>
 
 See additional visualization tools for the nekton index on our data page: https://tbep.org/tampa-bay-nekton-index/.
