--- a/docs/behavior-change.Rmd
+++ b/docs/behavior-change.Rmd
@@ -23,3 +23,5 @@ TBEP keeps the [Scoop that Poop!](https://tbep.org/scoop-that-poop/) campaign al
 <p><center><img alt="Be Floridian" src="img/BF.png" width="600"/></center></p>
 
 Each summer, TBEP encourages residents to "protect their fun" as part of the [Be Floridian](https://tbep.org/our-work/education/be-floridian/) campaign. Through inbound marketing tactics, the Program works to increase awareness of regional fertilizer ordinances, shares tips for individuals to reduce their nutrient footprint and encourages Florida-Friendly Landscaping practices.
+
+<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
