--- a/docs/habitat-restoration.Rmd
+++ b/docs/habitat-restoration.Rmd
@@ -39,3 +39,5 @@ Restoration opportunities by segment: https://github.com/tbep-tech/hmpu-workflow
 Habitat restoration table: https://drive.google.com/file/d/1zVx18P6lrPuVR6ANMAetBRXwxCGeCN9b/view?usp=sharing 
 
 Habitat restoration projects (and associated database) in the Tampa Bay Watershed: https://www.tampabay.wateratlas.usf.edu/restoration/
+
+<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
