--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -30,3 +30,4 @@ coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = F, family = fml
 coms_tab(comdat, category = 'Email Marketing', maxyr = maxyr, chg = F, family = fml, showtab = F)
 ```
 
+<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
