--- a/docs/tampa-bay-benthic-index.Rmd
+++ b/docs/tampa-bay-benthic-index.Rmd
@@ -40,3 +40,5 @@ knitr::include_graphics(here('figures/PEL_Map1993-2017.jpg'))
 ```
 
 Link to benthic data page: https://tbep.org/tampa-bay-benthic-index/
+
+<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
