--- a/docs/total-nitrogen-loading.Rmd
+++ b/docs/total-nitrogen-loading.Rmd
@@ -14,15 +14,14 @@ load(file = here('data/popdat.RData'))
 In 2011, the Florida Department of Environmental Protection approved regulatory thresholds for nutrients that apply to major segments of Tampa Bay.  These criteria describe a point at which nutrient loadings may have a negative impact on environmental resources.  These thresholds are defined for ratios of total nitrogen (nutrient load) to the volume of water (hydrologic load) entering the bay, accounting for annual variation in rainfall.  Each year, the Tampa Bay Nitrogen Management Consortium assesses if conditions are within allowable limits.  This is accomplished through regular synthesis and reporting of load estimates by the Tampa Bay Estuary Program.  To date, nitrogen and hydrologic load ratios continue to decline throughout the Bay, indicating that the Nitrogen Management Consortium has been effective at reducing the amount of nutrients per unit of water input into Tampa Bay. 
 
 ```{r}
-p <- ldtot_plo(totanndat, yval = 'tnhy', levs = c('Old Tampa Bay', 'Hillsborough Bay', 'Middle Tampa Bay', 'Lower Tampa Bay'), 
-          addlns = T, width = 700, height = 550, family = fml)
-div(p, align = 'center')
+ldtot_plo(totanndat, yval = 'tnhy', levs = c('Old Tampa Bay', 'Hillsborough Bay', 'Middle Tampa Bay', 'Lower Tampa Bay'), 
+          addlns = T, width = 1000, height = 650, family = fml)
 ```
 
 Despite an increasing population in the Tampa Bay metropolitan area, per capita TN loading also continues to decrease over time. The amount of TN delivered per unit water has also decreased over time in each of the major bay segments. To date, hydrologically-normalized total loads to Tampa Bay are at the lowest levels since they have been estimated (1985-2020). 
 
 ```{r, out.width = '100%'}
-ldrat_plo(totanndat, popdat, width = 900, height = 400, family = fml)
+ldrat_plo(totanndat, popdat, width = 1000, height = 400, family = fml)
 ```
 
 See additional visualization tools for nutrient loading data here: https://tbep-tech.github.io/load-estimates/.
