--- a/docs/total-nitrogen-loading.Rmd
+++ b/docs/total-nitrogen-loading.Rmd
@@ -20,12 +20,9 @@ ldtot_plo(totanndat, yval = 'tnhy', levs = c('Old Tampa Bay', 'Hillsborough Bay'
 
 Despite an increasing population in the Tampa Bay metropolitan area, per capita TN loading also continues to decrease over time. The amount of TN delivered per unit water has also decreased over time in each of the major bay segments. To date, hydrologically-normalized total loads to Tampa Bay are at the lowest levels since they have been estimated (1985-2020). 
 
-# {.tabset .tabset-pills}
-
-## Test
-
 ```{r, out.width = '100%'}
-ldrat_plo(totanndat, popdat, width = 1000, height = 400, family = fml)
+p <- ldrat_plo(totanndat, popdat, width = 900, height = 400, family = fml)
+div(p, align = 'center')
 ```
 
 See additional visualization tools for nutrient loading data here: https://tbep-tech.github.io/load-estimates/.
