--- a/docs/tampa-bay-nekton-index.Rmd
+++ b/docs/tampa-bay-nekton-index.Rmd
@@ -10,6 +10,12 @@ source(here::here('R/setup.R'))
 maxyr <- 2020
 tbniscr <- anlz_tbniscr(fimdata)
 
+# local file path
+xlsx <- here('data-raw/Results_Updated.xls')
+
+# import and download if new
+epcdata <- read_importwq(xlsx, download_latest = T)
+
 # summaries for inline
 sums <- tbnisum_fun(tbniscr, maxyr)
 ```
@@ -30,9 +36,14 @@ An annual "snapshot" of ecological health helps fisheries managers target effort
 The long-term results for the nekton index suggest the fish community is resistant to large-scale changes and resilient to episodic disturbance. For example, "Yellow" cautionary scores were observed in the mid-2000s and 2010/11 when red tide conditions and cold snaps may have affected the bay fish community. Recent conditions suggest the fish community is in a healthy state, with all four major bay segments receiving "green" scores the past four years.  Long-term trends in nekton index scores by bay segment are shown below.
 
 ```{r, out.width = '100%'}
-show_tbniscr(tbniscr, family = fml, width = 1000, height = 450, plotly = T) %>% 
-  layout(margin = list(l = 100, r = 150))
+show_tbniscr(tbniscr, family = fml, width = 1000, height = 450, plotly = T)#%>% 
+  # layout(margin = list(l = 100, r = 150))
 # div(p, align = 'center')
+```
+
+
+```{r, out.width = '100%'}
+wqplotly_plo(epcdata, bay_segment = 'OTB', yrrng = c(1975, maxyr), family = fml, width = 1000, height = 500)
 ```
 
 ## Results for `r maxyr`
