--- a/docs/critical-coastal-habitat-trends.Rmd
+++ b/docs/critical-coastal-habitat-trends.Rmd
@@ -15,10 +15,12 @@ sprmax <- '2020'
 
 subest <- lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = submax, estout = T) %>% 
   select(val, chgper) %>% 
-  tibble::deframe()
+  tibble::deframe() %>% 
+  gsub('\\-', '', .)
 sprest <- lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = sprmax, estout = T) %>% 
   select(val, chgper) %>% 
-  tibble::deframe()
+  tibble::deframe() %>% 
+  gsub('\\-', '', .)
 ```
 
 Prior to the 1980s, many of Tampa Bay’s habitats were damaged, reduced, or lost during development activities. Once the value of these habitats was recognized, protections were put in place and monitoring began on a regular basis to understand the effectiveness of different conservation and restoration activities.
