fixing bay mini grant summary, #30

--- a/docs/grants-awarded.Rmd
+++ b/docs/grants-awarded.Rmd
@@ -35,7 +35,7 @@ To date, the Tampa Bay Environmental Restoration Fund ([TBERF](https://tbep.org/
 </div>
 <p></p>
 
-Funded by sales from of the Tampa Bay Estuary Specialty License Plate, also known as the [Tarpon Tag](https://tbep.org/get-involved/tarpon-tag/), [Bay Mini-Grants](https://tbep.org/our-work/restoration-research/bay-mini-grants/) provide competitive cash awards (up to \$5,000) to community organizations for projects that help restore and protect Tampa Bay. To achieve Program CCMP goals, specific Bay Mini-Grant priority actions are announced annually. Expanding the use of green infrastructure and understanding emerging contaminants have both been recent Bay Mini-Grant priorities. Since 2000, sales from the Tarpon Tag specialty license plate have collectively awarded `r bmgsum['total']` to more than `r bmgsum['n']` community-based restoration projects in the bay through TBEP's Bay Mini-Grant program.
+Funded by sales from of the Tampa Bay Estuary Specialty License Plate, also known as the [Tarpon Tag](https://tbep.org/get-involved/tarpon-tag/), [Bay Mini-Grants](https://tbep.org/our-work/restoration-research/bay-mini-grants/) provide competitive cash awards (up to \$5,000) to community organizations for projects that help restore and protect Tampa Bay. To achieve Program CCMP goals, specific Bay Mini-Grant priority actions are announced annually. Expanding the use of green infrastructure and understanding emerging contaminants have both been recent Bay Mini-Grant priorities. Since 2000, sales from the Tarpon Tag specialty license plate have collectively awarded `r bmgsum['total']` to `r bmgsum['n']` community-based restoration projects in the bay through TBEP's Bay Mini-Grant program.
 
 <center><img alt="DCG Computer" src="img/Computer_Iso.png" width="300"/></center>
 
