--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -32,7 +32,21 @@ coms_tab(comdat, category = 'Website', maxyr = maxyr, chg = F, family = fml, sho
 coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = F, family = fml)
 ```
 
-#### TOTALS TO DATE 
+#### TOTALS TO DATE {.tabset .tabset-pills}
+
+##### Followers
+
+```{r}
+p <- comssum_plo(comdat, category = 'Social Media', metric = 'users', family = fml, width = 700, height = 600)
+div(p, align = 'center')
+```
+
+##### Engagement
+
+```{r}
+p <- comssum_plo(comdat, category = 'Social Media', metric = 'engagement', family = fml, width = 700, height = 600)
+div(p, align = 'center')
+```
 
 ### Email Marketing
 
