--- a/docs/critical-coastal-habitat-trends.Rmd
+++ b/docs/critical-coastal-habitat-trends.Rmd
@@ -29,6 +29,9 @@ sprest <- lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', t
   select(val, chgper) %>% 
   tibble::deframe() %>% 
   gsub('\\-', '', .)
+
+# seagrass inline
+sgsums <- sgsum_fun(seagrass, submax)
 ```
 
 Prior to the 1980s, many of Tampa Bay’s habitats were damaged, reduced, or lost during development activities. Once the value of these habitats was recognized, protections were put in place and monitoring began on a regular basis to understand the effectiveness of different conservation and restoration activities.
@@ -60,6 +63,21 @@ lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = spr
 alluvout2(chgdat, fluccs, family = fml, maxyr = sprmax, width = 1000, height = 800)
 ```
 
-See additional visualization tools for land use change here: https://shiny.tbep.org/landuse-change/. See additional visualization tools for seagrass coverage data here: https://shiny.tbep.org/seagrass-analysis/. See additional visualization tools for seagrass species change here: https://shiny.tbep.org/seagrasstransect-dash/. 
+## Seagrasses in Tampa Bay
+
+Seagrasses are used by the Tampa Bay Estuary Program to assess progress in achieving water quality goals. Seagrasses need sunlight to grow.  With improving water clarity, seagrasses can thrive in Tampa Bay.
+
+Areal coverage of seagrasses are tracked semi-annually to determine if they are increasing or decreasing over time.  From `r formals(sgsum_fun)$refyr` to `r submax`, seagrasses `r sgsums$refdir` by `r sgsums$refcmp` acres.  For the most recent years of seagrass maps, seagrasses `r sgsums$recdir` by `r sgsums$reccmp` acres from `r sgsums$penult` to `r submax`. Most significant seagrass losses were in Old Tampa Bay, a segment that has not been meeting water quality targets in recent years.
+
+```{r, fig.height = 4.5, fig.width = 10}
+sgcov_plo(seagrass, family = fml)
+```
+
+## Resources
+
+* [Visualization tools for land use change](https://shiny.tbep.org/landuse-change/) 
+* [Seagrass monitoring in Tampa Bay](https://tampabay.wateratlas.usf.edu/seagrass-monitoring/)
+* [Data products for seagrass](https://tbep.org/seagrass-assessment/)
+* [Visualization tool for seagrass change](https://shiny.tbep.org/seagrass-analysis/)
 
 <script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
